# 42lyon_shifts_agenda

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ENDPOINTS.md  Makefile  database.sql  docker-compose.yml  index.html  init.sql  nginx.conf  package-lock.json  package.json  run_db.sh  run_dev.sh  target
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.js  App.vue  api.ts  index.css  main.ts  style.css
frontend/src/components/: NavBar.vue  ShiftCard.vue  Toaster.vue  UserBadge.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  toast.ts
frontend/src/types/: shift.ts  user.ts
frontend/src/views/: CallbackView.vue  DemoView.vue  HomeView.vue  LoginView.vue  LogoutView.vue  ShiftsListView.vue  ShiftsView.vue
resources/css/: style.css
resources/js/: main.js
src/: auth.rs  db.rs  error.rs  main.rs  model.rs  routes.rs  util.rs
src/api/: login.rs  mod.rs  shifts.rs  users.rs
tailwind/: input.css
templates/: base.html  index.html
templates/pages/: index.html
