[package]
name = "foyer-shifts"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono"] }
thiserror = "2.0.12"
actix-files = "0.6.6"
chrono = { version = "0.4.41", features = ["serde"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
argon2 = "0.5.3"
