[package]
name = "foyer-shifts"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.11.0"
anyhow = "1.0.100"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
reqwest = {version = "0.12.24", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono"] }
thiserror = "2.0.12"
tracing = "0.1.41"
